src/objects/Mock_Response_Details__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Field to store Salesforce ID which is used for deployment</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchParameter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Search Parameter</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebserviceConfigurations__c</fullName>
        <label>Webservice Configurations</label>
        <referenceTo>WebserviceConfigurations__c</referenceTo>
        <relationshipName>Mock_Response_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Mock Response Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Mock Response Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mock Response Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>